--- a/administrator/components/com_banners/models/forms/download.xml
+++ b/administrator/components/com_banners/models/forms/download.xml
@@ -7,14 +7,14 @@
 			id="compressed"
 			name="compressed"
 			type="radio"
-			label="Banners_Compressed_Label"
-			description="Banners_Compressed_Desc"
+			label="COM_BANNERS_FIELD_COMPRESSED_LABEL"
+			description="COM_BANNERS_FIELD_COMPRESSED_DESC"
 			class="inputbox"
 			default="0">
 			<option
-				value="0">JNo</option>
+				value="0">JNO</option>
 			<option
-				value="1">JYes</option>
+				value="1">JYES</option>
 		</field>
 
 		<field
@@ -24,8 +24,8 @@
 			class="inputbox"
 			default=""
 			size="40"
-			label="Banners_BaseName_Label"
-			description="Banners_BaseName_Desc"/>
+			label="COM_BANNERS_FIELD_BASENAME_LABEL"
+			description="COM_BANNERS_FIELD_BASENAME_DESC"/>
 
 	</fields>
 </form>
