$ Mass change key USE_GLOBAL to JCOMMON_USE_GLOBAL
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15316 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_categories/models/forms/category.xml
+++ b/administrator/components/com_categories/models/forms/category.xml
@@ -229,7 +229,7 @@
 			description="JField_Metadata_Robots_Desc"
 			default="">
 			<option
-				value="">USE_GLOBAL</option>
+				value="">JCOMMON_USE_GLOBAL</option>
 			<option
 				value="0">index, follow</option>
 			<option
