--- a/administrator/components/com_plugins/models/forms/plugin.xml
+++ b/administrator/components/com_plugins/models/forms/plugin.xml
@@ -28,10 +28,10 @@
 			default="1">
 			<option
 				value="1">
-				JOption_Enabled</option>
+				JOPTION_ENABLED</option>
 			<option
 				value="0">
-				JOption_Disabled</option>
+				JOPTION_DISABLED</option>
 		</field>
 
 		<field
@@ -55,8 +55,8 @@
 		<field
 			name="access"
 			type="accesslevel"
-			label="JField_Access_Label"
-			description="JField_Access_Desc"
+			label="JFIELD_ACCESS_LABEL"
+			description="JFIELD_ACCESS_DESC"
 			class="inputbox"
 			size="1"
 			default="" />
@@ -66,30 +66,8 @@
 			type="Ordering"
 			class="inputbox"
 			default=""
-			label="JField_Ordering_Label"
-			description="JField_Ordering_Desc" />
-
-		<field
-			name="checked_out"
-			type="Text"
-			class="inputbox"
-			default=""
-			size="6"
-			label="Newsfeeds_Checkedout_Label"
-			description="Newsfeeds_Checkedout_Desc"
-			readonly="true"
-			filter="unset" />
-
-		<field
-			name="checked_out_time"
-			type="Text"
-			class="inputbox"
-			default=""
-			size="6"
-			label="Newsfeeds_Checkedout_Time_Label"
-			description="Newsfeeds_Checkedout_Time_Desc"
-			readonly="true"
-			filter="unset" />
+			label="JFIELD_ORDERING_LABEL"
+			description="JFIELD_ORDERING_DESC" />
 
 		<field
 			name="params"
