--- a/administrator/components/com_menus/models/forms/item_component.xml
+++ b/administrator/components/com_menus/models/forms/item_component.xml
@@ -3,79 +3,79 @@
 <form>
 	<fields
 		group="hyperlinkoptions"
-		label="Menus_Linktype_Options_Label"
+		label="COM_MENUS_LINKTYPE_OPTIONS_LABEL"
 		description="">
 
 		<field
 			id="menu-anchor_title"
 			name="menu-anchor_title"
 			type="text"
-			label="Menus_Item_Anchor_Title_Label"
-			description="Menus_item_Anchor_Title_Desc"
+			label="COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC"
 			default=""/>
 
 		<field
 			id="menu-anchor_css"
 			name="menu-anchor_css"
 			type="text"
-			label="Menus_Item_Anchor_CSS_Label"
-			description="Menus_item_Anchor_CSS_Desc"
+			label="COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL"
+			description="COM_MENUS_ITEM_FIELD_ANCHOR_CSS_DESC"
 			default=""/>
 
 		<field
 			id="menu_image"
 			name="menu_image"
 			type="text"
-			label="Menus_Item_Menu_Image_Label"
-			description="Menus_Item_Menu_Image_Desc"
+			label="COM_MENUS_ITEM_FIELD_MENU_IMAGE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_MENU_IMAGE_DESC"
 			default=""/>
 
 		<field
 			id="show_page_title"
 			name="show_page_title"
 			type="radio"
-			label="Menus_Item_Show_Page_Title_Label"
-			description="Menus_Item_Show_Page_Title_Desc"
+			label="COM_MENUS_ITEM_FIELD_SHOW_PAGE_TITLE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_SHOW_PAGE_TITLE_DESC"
 			default="1"
 			filter="integer">
 			<option
 				value="0"
-				class="no">JNo</option>
+				class="no">JNO</option>
 			<option
 				value="1"
-				class="yes">JYes</option>
+				class="yes">JYES</option>
 		</field>
 
 		<field
 			id="page_title"
 			name="page_title"
 			type="text"
-			label="Menus_Item_Page_Title_Label"
-			description="Menus_Item_Page_Title_Desc"
+			label="COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_PAGE_TITLE_DESC"
 			default=""/>
 
 		<field
 			id="page_heading"
 			name="page_heading"
 			type="text"
-			label="Menus_Item_Page_Heading_Label"
-			description="Menus_Item_Page_Heading_Desc"
+			label="COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL"
+			description="COM_MENUS_ITEM_FIELD_PAGE_HEADING_DESC"
 			default=""/>
 
 		<field
 			id="pageclass_sfx"
 			name="pageclass_sfx"
 			type="text"
-			label="Menus_Item_Page_Class_Label"
-			description="Menus_Item_Page_Class_Desc"
+			label="COM_MENUS_ITEM_FIELD_PAGE_CLASS_LABEL"
+			description="COM_MENUS_ITEM_FIELD_PAGE_CLASS_DESC"
 			default=""/>
 
 		<field
 			id="menu-meta_description"
 			name="menu-meta_description"
 			type="textarea"
-			label="JField_Meta_Description_Label"
-			description="Menus_Item_Meta_Description_Desc"
+			label="JFIELD_META_DESCRIPTION_LABEL"
+			description="COM_MENUS_ITEM_FIELD_META_DESCRIPTION_DESC"
 			default=""
 			rows="3"
 			cols="40"/>
@@ -84,8 +84,8 @@
 			id="menu-meta_keywords"
 			name="menu-meta_keywords"
 			type="textarea"
-			label="JField_Meta_Keywords_Label"
-			description="Menus_Item_Meta_Keywords_Desc"
+			label="JFIELD_META_KEYWORDS_LABEL"
+			description="COM_MENUS_ITEM_FIELD_META_KEYWORDS_DESC"
 			default=""
 			rows="3"
 			cols="40"/>
@@ -93,8 +93,8 @@
 			<field
 			name="robots"
 			type="list"
-			label="JField_Metadata_Robots_Label"
-			description="JField_Metadata_Robots_Desc"
+			label="JFIELD_METADATA_ROBOTS_LABEL"
+			description="JFIELD_METADATA_ROBOTS_DESC"
 			default="">
 			<option
 				value="">JCOMMON_USE_GLOBAL</option>
@@ -114,8 +114,8 @@
 			id="secure"
 			name="secure"
 			type="radio"
-			label="Menus_Item_Secure_Label"
-			description="Menus_Item_Secure_Desc"
+			label="COM_MENUS_ITEM_FIELD_SECURE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_SECURE_DESC"
 			default="0"
 			filter="integer">
 			<option
@@ -123,7 +123,7 @@
 			<option
 				value="1">JON</option>
 			<option
-				value="0">Ignore</option>
+				value="0">COM_MENUS_FIELD_VALUE_IGNORE</option>
 
 		</field>
 
