--- a/administrator/components/com_menus/models/forms/item_options.xml
+++ b/administrator/components/com_menus/models/forms/item_options.xml
@@ -2,23 +2,23 @@
 	<!-- $Id: item_alias.xml 12477 2009-07-06 04:31:45Z eddieajau $ -->
 <form>
 	<fields
-		label="Menus_Linktype_Options_Label"
+		label="COM_MENUS_LINKTYPE_OPTIONS_LABEL"
 		description="">
 
 		<field
 			id="menu-anchor_title"
 			name="menu-anchor_title"
 			type="text"
-			label="Menus_Item_Anchor_Title_Label"
-			description="Menus_item_Anchor_Title_Desc"
+			label=COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL
+			description=COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC
 			default=""/>
 
 		<field
 			id="menu-anchor_css"
 			name="menu-anchor_css"
 			type="text"
-			label="Menus_Item_Anchor_CSS_Label"
-			description="Menus_item_Anchor_CSS_Desc"
+			label="COM_MENUS_ITEM_FIELD_ANCHOR_CSS_LABEL"
+			description="COM_MENUS_ITEM_FIELD_ANCHOR_CSS_DESC"
 			default=""/>
 
 	</fields>
