# Correcting missing doublequotes (15370)
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15386 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_menus/models/forms/item_options.xml
+++ b/administrator/components/com_menus/models/forms/item_options.xml
@@ -9,8 +9,8 @@
 			id="menu-anchor_title"
 			name="menu-anchor_title"
 			type="text"
-			label=COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL
-			description=COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC
+			label="COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL"
+			description="COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC"
 			default=""/>
 
 		<field
