^$ Creating JSITE and JADMINISTRATOR keys in main ini file. Globally consolidated all keys with same value to these new keys.
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15735 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_modules/models/forms/module.xml
+++ b/administrator/components/com_modules/models/forms/module.xml
@@ -73,8 +73,8 @@
 			readonly="true"
 			size="1"
 		>
-			<option value="0">COM_MODULES_OPTION_SITE</option>
-			<option value="1">COM_MODULES_OPTION_ADMINISTRATOR</option>
+			<option value="0">JSITE</option>
+			<option value="1">JADMINISTRATOR</option>
 		</field>
 
 		<field name="position" type="moduleposition"
