$^+ Consolidating some keys with same value to a unique key in main inis. WIP
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15812 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_categories/models/forms/category.xml
+++ b/administrator/components/com_categories/models/forms/category.xml
@@ -96,16 +96,16 @@
 		description="JFIELD_PUBLISHED_DESC">
 		<option
 			value="1">
-			JOPTION_PUBLISHED</option>
+			JPUBLISHED</option>
 		<option
 			value="0">
-			JOPTION_UNPUBLISHED</option>
+			JUNPUBLISHED</option>
 		<option
 			value="-1">
-			JOPTION_ARCHIVED</option>
+			JARCHIVED</option>
 		<option
 			value="-2">
-			JOPTION_TRASHED</option>
+			JTRASHED</option>
 	</field>
 
 	<field
