$^+ Consolidating some keys with same value to a unique key in main inis. WIP
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@15837 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_categories/models/forms/category.xml
+++ b/administrator/components/com_categories/models/forms/category.xml
@@ -224,7 +224,7 @@
 		<field
 			name="author"
 			type="text"
-			label="JFIELD_METADATA_AUTHOR_LABEL"
+			label="JAUTHOR"
 			description="JFIELD_METADATA_AUTHOR_DESC"
 			size="30"
 			default=""/>
