--- a/components/com_fields/forms/filter_fields.xml
+++ b/components/com_fields/forms/filter_fields.xml
@@ -14,6 +14,7 @@
 			type="text"
 			inputmode="search"
 			label=""
+			description="COM_FIELDS_FIELDS_FILTER_SEARCH_DESC"
 			hint="JSEARCH_FILTER"
 			class="js-stools-search-string"
 		/>
