--- a/administrator/components/com_actionlogs/forms/filter_actionlogs.xml
+++ b/administrator/components/com_actionlogs/forms/filter_actionlogs.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form addfieldprefix="Joomla\Component\Actionlogs\Administrator\Field">
+<form>
 	<fields name="filter">
 		<field
 			name="search"
 			type="text"
-			inputmode="search"
-			label="COM_ACTIONLOGS_FILTER_SEARCH_DESC"
-			description="COM_ACTIONLOGS_SEARCH_IN_NAME"
+			description="COM_ACTIONLOGS_FILTER_SEARCH_DESC"
 			hint="JSEARCH_FILTER"
 		/>
 		<field
 			name="extension"
 			type="extension"
-			label="COM_ACTIONLOGS_SELECT_EXTENSION"
+			label="COM_ACTIONLOGS_EXTENSION"
+			description="COM_ACTIONLOGS_EXTENSION_FILTER_DESC"
 			onchange="this.form.submit()"
 			>
 			<option value="">COM_ACTIONLOGS_SELECT_EXTENSION</option>
@@ -21,6 +20,7 @@
 			name="dateRange"
 			type="logsdaterange"
 			label="COM_ACTIONLOGS_OPTION_FILTER_DATE"
+			description="COM_ACTIONLOGS_OPTION_FILTER_DATE"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_ACTIONLOGS_OPTION_FILTER_DATE</option>
@@ -28,7 +28,6 @@
 		<field
 			name="user"
 			type="logcreator"
-			label="COM_ACTIONLOGS_SELECT_USER"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_ACTIONLOGS_SELECT_USER</option>
@@ -38,7 +37,8 @@
 		<field
 			name="fullordering"
 			type="list"
-			label="JGLOBAL_SORT_BY"
+			label="COM_ACTIONLOGS_LIST_FULL_ORDERING"
+			description="COM_ACTIONLOGS_LIST_FULL_ORDERING_DESC"
 			onchange="this.form.submit();"
 			default="a.id DESC"
 			>
@@ -49,8 +49,8 @@
 			<option value="a.extension DESC">COM_ACTIONLOGS_EXTENSION_DESC</option>
 			<option value="a.log_date ASC">JDATE_ASC</option>
 			<option value="a.log_date DESC">JDATE_DESC</option>
-			<option value="a.user_id ASC">JGLOBAL_NAME_ASC</option>
-			<option value="a.user_id DESC">JGLOBAL_NAME_DESC</option>
+			<option value="a.user_id ASC">COM_ACTIONLOGS_NAME_ASC</option>
+			<option value="a.user_id DESC">COM_ACTIONLOGS_NAME_DESC</option>
 			<option value="a.id ASC">JGRID_HEADING_ID_ASC</option>
 			<option value="a.id DESC">JGRID_HEADING_ID_DESC</option>
 		</field>
@@ -59,7 +59,8 @@
 		<field
 			name="limit"
 			type="limitbox"
-			label="JGLOBAL_LIST_LIMIT"
+			label="COM_ACTIONLOGS_LIST_LIMIT"
+			description="COM_ACTIONLOGS_LIST_LIMIT_DESC"
 			class="input-mini"
 			onchange="this.form.submit();"
 			default="25"
