--- a/administrator/components/com_banners/forms/filter_tracks.xml
+++ b/administrator/components/com_banners/forms/filter_tracks.xml
@@ -82,6 +82,7 @@
 			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="b.name ASC"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="b.name ASC">JGLOBAL_NAME_ASC</option>
