--- a/administrator/components/com_finder/forms/filter_filters.xml
+++ b/administrator/components/com_finder/forms/filter_filters.xml
@@ -28,6 +28,7 @@
 			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="a.title ASC"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="a.state ASC">JSTATUS_ASC</option>
