--- a/administrator/components/com_finder/forms/filter_index.xml
+++ b/administrator/components/com_finder/forms/filter_index.xml
@@ -55,6 +55,7 @@
 			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="l.title ASC"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="l.published ASC">JSTATUS_ASC</option>
