--- a/administrator/components/com_finder/forms/filter_maps.xml
+++ b/administrator/components/com_finder/forms/filter_maps.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form addfieldprefix="Joomla\Component\Finder\Administrator\Field">
+<form>
 	<fields name="filter">
 		<field
 			name="search"
 			type="text"
-			inputmode="search"
 			label="COM_FINDER_SEARCH_SEARCH_QUERY_LABEL"
 			description="COM_FINDER_SEARCH_SEARCH_QUERY_DESC"
 			hint="JSEARCH_FILTER"
@@ -13,7 +12,8 @@
 		<field
 			name="state"
 			type="status"
-			label="JOPTION_SELECT_PUBLISHED"
+			label="COM_FINDER_FILTER_PUBLISHED"
+			description="COM_FINDER_FILTER_PUBLISHED_DESC"
 			filter="0,1"
 			onchange="this.form.submit();"
 			>
@@ -23,7 +23,6 @@
 		<field
 			name="branch"
 			type="branches"
-			label="COM_FINDER_MAPS_SELECT_BRANCH"
 			default="0"
 			onchange="this.form.submit();"
 		/>
@@ -31,7 +30,8 @@
 		<field
 			name="level"
 			type="integer"
-			label="JOPTION_SELECT_MAX_LEVELS"
+			label="JOPTION_FILTER_LEVEL"
+			description="JOPTION_FILTER_LEVEL_DESC"
 			first="1"
 			last="2"
 			step="1"
@@ -46,21 +46,21 @@
 		<field
 			name="fullordering"
 			type="list"
-			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
-			default="branch_title ASC"
+			default="d.branch_title ASC"
+			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
+			<option value="d.branch_title ASC">JGLOBAL_TITLE_ASC</option>
+			<option value="d.branch_title DESC">JGLOBAL_TITLE_DESC</option>
 			<option value="a.state ASC">JSTATUS_ASC</option>
 			<option value="a.state DESC">JSTATUS_DESC</option>
-			<option value="branch_title ASC">JGLOBAL_TITLE_ASC</option>
-			<option value="branch_title DESC">JGLOBAL_TITLE_DESC</option>
 		</field>
 
 		<field
 			name="limit"
 			type="limitbox"
-			label="JGLOBAL_LIST_LIMIT"
+			class="input-mini"
 			default="25"
 			onchange="this.form.submit();"
 		/>
