--- a/administrator/components/com_plugins/forms/filter_plugins.xml
+++ b/administrator/components/com_plugins/forms/filter_plugins.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form addfieldprefix="Joomla\Component\Plugins\Administrator\Field">
+<form>
+	<fieldset addfieldpath="/administrator/components/com_plugins/models/fields" />
+
 	<fields name="filter">
 		<field
 			name="search"
 			type="text"
-			inputmode="search"
 			label="COM_PLUGINS_FILTER_SEARCH_LABEL"
 			description="COM_PLUGINS_SEARCH_IN_TITLE"
 			hint="JSEARCH_FILTER"
@@ -13,36 +14,34 @@
 		<field
 			name="enabled"
 			type="plugin_status"
-			label="JOPTION_SELECT_PUBLISHED"
 			onchange="this.form.submit();"
-			>
+		>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
 		</field>
 
 		<field
 			name="folder"
-			type="PluginType"
-			label="COM_PLUGINS_OPTION_FOLDER"
+			type="plugintype"
 			onchange="this.form.submit();"
-			>
+		>
 			<option value="">COM_PLUGINS_OPTION_FOLDER</option>
 		</field>
 
 		<field
 			name="element"
-			type="PluginElement"
-			label="COM_PLUGINS_OPTION_ELEMENT"
+			type="pluginelement"
 			onchange="this.form.submit();"
-			>
+		>
 			<option value="">COM_PLUGINS_OPTION_ELEMENT</option>
 		</field>
 
 		<field
 			name="access"
 			type="accesslevel"
-			label="JOPTION_SELECT_ACCESS"
+			label="JOPTION_FILTER_ACCESS"
+			description="JOPTION_FILTER_ACCESS_DESC"
 			onchange="this.form.submit();"
-			>
+		>
 			<option value="">JOPTION_SELECT_ACCESS</option>
 		</field>
 	</fields>
@@ -52,16 +51,18 @@
 			name="fullordering"
 			type="list"
 			label="JGLOBAL_SORT_BY"
+			description="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="folder ASC"
-			>
+			validate="options"
+		>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
 			<option value="ordering DESC">JGRID_HEADING_ORDERING_DESC</option>
 			<option value="enabled ASC">JSTATUS_ASC</option>
 			<option value="enabled DESC">JSTATUS_DESC</option>
-			<option value="name ASC">JGLOBAL_NAME_ASC</option>
-			<option value="name DESC">JGLOBAL_NAME_DESC</option>
+			<option value="name ASC">JGLOBAL_TITLE_ASC</option>
+			<option value="name DESC">JGLOBAL_TITLE_DESC</option>
 			<option value="folder ASC">COM_PLUGINS_HEADING_FOLDER_ASC</option>
 			<option value="folder DESC">COM_PLUGINS_HEADING_FOLDER_DESC</option>
 			<option value="element ASC">COM_PLUGINS_HEADING_ELEMENT_ASC</option>
@@ -75,7 +76,7 @@
 		<field
 			name="limit"
 			type="limitbox"
-			label="JGLOBAL_LIST_LIMIT"
+			class="input-mini"
 			default="25"
 			onchange="this.form.submit();"
 		/>
