--- a/administrator/components/com_finder/forms/filter_searches.xml
+++ b/administrator/components/com_finder/forms/filter_searches.xml
@@ -5,8 +5,8 @@
 			name="search"
 			type="text"
 			inputmode="search"
-			label="COM_FINDER_SEARCH_IN_PHRASE_LABEL"
-			description="COM_FINDER_SEARCH_IN_PHRASE_DESC"
+			label="COM_SEARCH_SEARCH_IN_PHRASE"
+			description="COM_SEARCH_SEARCH_IN_PHRASE"
 			hint="JSEARCH_FILTER"
 		/>
 	</fields>
@@ -14,21 +14,20 @@
 		<field
 			name="fullordering"
 			type="list"
-			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="a.hits ASC"
 			validate="options"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
-			<option value="a.searchterm ASC">COM_FINDER_HEADING_SEARCH_TERM_ASC</option>
-			<option value="a.searchterm DESC">COM_FINDER_HEADING_SEARCH_TERM_DESC</option>
+			<option value="a.search_term ASC">COM_SEARCH_HEADING_SEARCH_TERM_ASC</option>
+			<option value="a.search_term DESC">COM_SEARCH_HEADING_SEARCH_TERM_DESC</option>
 			<option value="a.hits ASC">JGLOBAL_HITS_ASC</option>
 			<option value="a.hits DESC">JGLOBAL_HITS_DESC</option>
 		</field>
 		<field
 			name="limit"
 			type="limitbox"
-			label="JGLOBAL_LIST_LIMIT"
+			class="input-mini"
 			default="25"
 			onchange="this.form.submit();"
 		/>
